--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="script.js"defer></script>
     </head>
     <body>
-        <h1>Shopping List</h1>
+        <h1>My List</h1>
         <p id="first">Get it done today</p>
         <p id="second">No Excuses</p>
         <input  id="inputvalue" type="text" placeholder="enter items">
