--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>My List</h1>
-        <p id="first">Get it done today</p>
+        <p id="first">I Will Get it done today</p>
         <p id="second">No Excuses</p>
         <input  id="inputvalue" type="text" placeholder="enter items">
         <button id="btn">enter</button>
